# SZGX_Speech

./: .gitignore  pyproject.toml  test_text_processing.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx
speech_processing_api/: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  fly.toml  pyproject.toml  requirements.txt  start.sh
speech_processing_api/app/: main.py  worker.py
speech_processing_api/app/api/v1/: file.py  logs.py  speech.py  text.py
speech_processing_api/app/core/: config.py  settings.py
speech_processing_api/app/services/: biblical_reference_detector.py  deduplication.py  emotion_analyzer.py  history_logger.py  text_improver.py  text_processor.py
speech_processing_api/app/utils/: token_utils.py
speech_processing_api/tests/: test_api.sh  test_data.py  test_encoding.py  test_file_upload.sh  test_logging.py  test_text_improvement.sh  test_text_processing.py
speech_processing_api/tests/data/: .gitignore
