[tool.poetry]
name = "szgx-speech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic = ">=2.10.6,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
numpy = ">=2.2.2,<3.0.0"
openai = ">=1.61.0,<2.0.0"
pydantic-settings = ">=2.7.1,<3.0.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
