[tool.poetry]
name = "speech-processing-api"
version = "0.1.0"
description = "Speech processing API with text analysis and biblical reference handling"
authors = ["Devin <devin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
openai = "^1.61.0"
pydantic-settings = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
