[tool.poetry]
name = "speech-processing-api"
version = "0.1.0"
description = "Speech processing API with text analysis and biblical reference handling"
authors = ["Devin <devin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tiktoken = "^0.8.0"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.0.1"
openai = "^1.61.0"
pydantic-settings = "^2.7.1"
celery = "^5.3.6"
redis = "^5.0.1"
numpy = "^2.2.2"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest-timeout = "^2.3.1"
chardet = "^5.2.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
